snapshot-tests/tests/snapshots/parser__redefine__table_then_dotted.snap
---
source: snapshot-tests/tests/parser.rs
assertion_line: 270
expression: error
---
error[duplicate-key]: the key `b` is defined multiple times
  ┌─ table_then_dotted:4:12
  │
3 │         b = {}
  │         - first key instance
4 │         [a.b]
  │            ^ duplicate key
